src/objects/Quote_Costs__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billable_Party__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Billable Party</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quote Costs</relationshipLabel>
        <relationshipName>Quote_Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payable_Party__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Payable Party</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quote Costs (Payable Party)</relationshipLabel>
        <relationshipName>Quote_Costs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prorate_Type__c</fullName>
        <label>Frequency</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <label>Quote</label>
        <referenceTo>Quote__c</referenceTo>
        <relationshipLabel>Quote Costs</relationshipLabel>
        <relationshipName>Quote_Costs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <label>Record Type Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Searches__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Selected Search</label>
        <referenceTo>Searches__c</referenceTo>
        <relationshipLabel>Quote Costs</relationshipLabel>
        <relationshipName>Quote_Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type_Description__c</fullName>
        <label>Description</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Quote Costs</label>
    <nameField>
        <label>Quote Costs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Costs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>